--- a/package.json
+++ b/package.json
@@ -16,10 +16,19 @@
     "test:e2e:ui": "playwright test --ui"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.15",
     "@supabase/supabase-js": "^2.58.0",
+    "@vercel/analytics": "^1.5.0",
+    "chart.js": "^4.5.0",
+    "framer-motion": "^12.23.22",
+    "geist": "^1.5.1",
+    "lucide-react": "^0.544.0",
     "next": "15.5.4",
+    "next-themes": "^0.4.6",
     "react": "19.1.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "19.1.0",
+    "react-hot-toast": "^2.6.0",
     "zod": "^4.1.11"
   },
   "devDependencies": {
